@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-01T16:24:53Z",
+  "timestamp" : "2022-11-02T08:21:44Z",
   "count_outdated" : 625,
   "uniques_outdated" : 359,
   "count" : 663,
-  "uniques" : 376,
+  "uniques" : 377,
   "clones" : [
     {
       "timestamp": "2022-10-19T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-11-01T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
