@@ -1,3 +1,11 @@
+2022-11-02T08:21:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3375906962 # 991
+* notice: last 14d: unq all: 4 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 359 625 / 376 663
+* notice: next accum: outdated-unq outdated-all / unq all: 359 625 / 377 663
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-19 2022-11-02]
+
 2022-11-01T16:24:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3371050733 # 989
 * notice: last 14d: unq all: 4 38
